<resources>
    <string name="app_name">BcSender</string>
    <string name="action_settings">Settings</string>
    <string name="s_textViewTitle">Currency Convertor App</string>
    <string name="s_textViewAmountLabel">Dollar Amount $:</string>
    <string name="s_editTextAmount">0.00</string>
    <string name="s_textViewConvertToLabel">Convert To:</string>
    <string name="s_buttonConvert">Convert</string>
    <string name="s_radioButtonPound">British Pound</string>
    <string name="s_radioButtonRupee">Indian Rupee</string>
    <string name="s_radioButtonEuro">Euro</string>
</resources>
